--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@
 
   </div> -->
   <section class="hero-parallax js-parallax"
-           style="background-image: url('{% if page.class == 'publications'%}../assets/img/Publications_Page.jpg{% endif %}');">
+           style="background-image: url('{% if page.class == 'publications'%}{{ site.url }}/assets/img/Publications_Page.jpg{% endif %}');">
 
     <div class="hero-parallax__content">
             <h1 class="hero-parallax__title hero-parallax__title--white">
