--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@
 
         <div class="members-single__photo">
 
-                      <img src="{{ page.author_img }}" alt="{{ page.author }}" />
+                      <img src="{{sit.url}}/assets/img/{{ page.author_img }}" alt="{{ page.author }}" />
 
         </div>
 
