--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -116,7 +116,7 @@
       </svg>
     </a>
 
-    <button class="toggle-btn toggle-btn--main-nav js-main-nav-toggle" type="button">
+    <button class="toggle-btn toggle-btn--main-nav js-main-nav-toggle is-expanded" type="button">
       <svg class="svg-icon svg-icon--main-nav" viewBox="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g class="svg-icon__arrows">
           <path d="M57.6,35.5 L55.1,36.6 C56.2,31.2 55.6,25.6 53.4,20.6 C47.4,7.3 31.9,1.4 18.6,7.3 L18.6,7.3 L14.6,9.1 L15.5,11.1 L19.5,9.3 L19.5,9.3 C31.6,3.9 45.9,9.3 51.3,21.5 C53.3,26 53.9,31.1 52.9,35.9 L51.7,33.3 L49.7,34.2 L51.9,39.2 C52.1,39.8 52.8,40 53.3,39.8 L58.3,37.6 L57.6,35.5 L57.6,35.5 Z"></path>
@@ -127,7 +127,7 @@
       </svg>
     </button>
 
-    <nav class="main-nav js-main-nav">
+    <nav class="main-nav js-main-nav is-expanded">
       <ul class="main-nav__list "><li class="main-nav__item  main-nav__item--691"><a href="{{site.url}}/news/index.html" class="main-nav__link">最近动态</a></li>
 <li class="main-nav__item  main-nav__item--687"><a href="{{site.url}}/research/index.html" class="main-nav__link">研究内容</a></li>
 <li class="main-nav__item  main-nav__item--170"><a href="{{site.url}}/publications/index.html" class="main-nav__link">研究成果</a></li>
