--- a/_includes/indexfooter.html
+++ b/_includes/indexfooter.html
@@ -4,7 +4,7 @@
     <div class="footer__content">
       <p><b>南京大学环境学院</b> / 江苏省南京市栖霞区仙林大道163号, 邮编 210046</p>
       <p><b>电话:</b><a href="tel:025-89680532"> 025-89680532</a> / <b>传真:</b><a href="tel:025-89680532"> 025-89680532</a></p>
-      <p><b>E: </b><a href="mailto:{{site.contact.email}}">{{site.contact.email}}</a></p>
+      <p><b>Email: </b><a href="mailto:{{site.contact.email}}">{{site.contact.email}}</a></p>
       <p>© 2017 南京大学袁增伟教授课题组</p>
       <p>Created by <a href="https://www.linkedin.com/in/宇星-廖-88b1a0126/" target="_blank" style="text-decoration: underline;">Yuxing Liao</a></p>
     </div>
@@ -12,20 +12,21 @@
     <ul class="social-icons social-icons--footer">
 
               <li class="social-icons__item">
-          <a class="social-icons__link" href="{{site.contact.twitter}}">
-            <svg class="svg-icon svg-icon--twitter" width="24px" height="20px">
-              <use xlink:href="#icon-twitter"></use>
+          <a class="social-icons__link" href="{{site.contact.weixin}}">
+            <img src="https://png.icons8.com/weixing/color/24" width="24px" height="20px">
+              <use xlink:href="#icon-wechat"></use>
             </svg>
           </a>
         </li>
               <li class="social-icons__item">
-          <a class="social-icons__link" href="{{site.contact.linkedin}}">
-            <svg class="svg-icon svg-icon--linkedin" width="24px" height="20px">
-              <use xlink:href="#icon-linkedin"></use>
+          <a class="social-icons__link" href="{{site.contact.weibo}}">
+            <img src="https://png.icons8.com/weibo/color/24" width="24px" height="20px">
+              <use xlink:href="#icon-weibo"></use>
             </svg>
-          </a>
+          </a><!--
+          <a href="https://icons8.com">Icon pack by Icons8</a>-->
         </li>
-      
+
     </ul>
 
   </div>
