--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,7 +76,7 @@
 
         <div class="members-single__photo">
 
-                      <img src="{{sit.url}}/assets/img/{% if page.author_img %}{{ page.author_img }}{% endif %}{% if page.img %}{{ page.img }}{% endif %}" alt="" />
+                      <img src="{{site.url}}/assets/img/{% if page.author_img %}{{ page.author_img }}{% endif %}{% if page.img %}{{ page.img }}{% endif %}" alt="" />
 
         </div>
 
